backport 1.1.1 => no longer stretch images in exam view

--- a/src/regitra.css
+++ b/src/regitra.css
@@ -538,6 +538,7 @@ button {
   max-height: 200px;
   height: 100%;
   width: auto;
+  object-fit: contain;
 }
 
 .infoSmall {
